--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,9 +116,6 @@ nav {
 #homePage nav {
   margin-bottom: 0;
 }
-nav a {
-  margin: 0 auto 2em auto;
-}
 a {
   text-decoration: none;
   color: #00f;
@@ -178,6 +175,104 @@ ul.noStyle {
 div.clear {
   clear: both;
 }
+@media only screen and (max-width: 767px) {
+  .aboutPage nav ul,
+  .educationPage nav ul,
+  .skillsPage nav ul,
+  .contactPage nav ul {
+    max-height: 0;
+    overflow: hidden;
+    margin: 0 3.5em 0 1em;
+  }
+  .aboutPage nav ul li,
+  .educationPage nav ul li,
+  .skillsPage nav ul li,
+  .contactPage nav ul li {
+    visibility: hidden;
+    display: block;
+    padding: 0;
+    border: none;
+  }
+  .aboutPage nav ul li a,
+  .educationPage nav ul li a,
+  .skillsPage nav ul li a,
+  .contactPage nav ul li a {
+    margin: 0 auto 1em auto;
+  }
+  .aboutPage nav .navbar-handle,
+  .educationPage nav .navbar-handle,
+  .skillsPage nav .navbar-handle,
+  .contactPage nav .navbar-handle {
+    display: block;
+  }
+  .aboutPage #navbar-checkbox:checked + nav ul,
+  .educationPage #navbar-checkbox:checked + nav ul,
+  .skillsPage #navbar-checkbox:checked + nav ul,
+  .contactPage #navbar-checkbox:checked + nav ul {
+    max-height: 350px;
+  }
+  .aboutPage #navbar-checkbox:checked + nav li,
+  .educationPage #navbar-checkbox:checked + nav li,
+  .skillsPage #navbar-checkbox:checked + nav li,
+  .contactPage #navbar-checkbox:checked + nav li {
+    visibility: visible;
+  }
+  .aboutPage nav,
+  .educationPage nav,
+  .skillsPage nav,
+  .contactPage nav {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  .aboutPage nav .navbar-handle,
+  .educationPage nav .navbar-handle,
+  .skillsPage nav .navbar-handle,
+  .contactPage nav .navbar-handle {
+    position: absolute;
+    font-size: 1.2em;
+    top: 0;
+    right: 12px;
+    z-index: 10;
+  }
+  .aboutPage h1,
+  .educationPage h1,
+  .skillsPage h1,
+  .contactPage h1 {
+    margin-top: 0;
+  }
+  .homePage nav ul li a {
+    margin: 0 auto 2em auto;
+  }
+}
+.navbar-checkbox {
+  display: none;
+}
+.navbar-handle {
+  display: none;
+  cursor: pointer;
+  position: relative;
+  font-size: 45px;
+  padding: 0.5em 0;
+  height: 0;
+  width: 1.66666667em;
+  border-top: 0.13333333em solid;
+}
+.navbar-handle:before,
+.navbar-handle:after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  content: ' ';
+  border-top: 0.13333333em solid;
+}
+.navbar-handle:before {
+  top: 0.37777778em;
+}
+.navbar-handle:after {
+  top: 0.88888889em;
+}
 @media only screen and (min-width: 768px) {
   nav {
     width: 550px;
@@ -219,11 +314,6 @@ div.clear {
   .aboutPage p {
     font-size: 1.5em;
     line-height: 1.5em;
-  }
-  .ng-enter {
-    -webkit-animation: scaleUp 0.5s both ease-in;
-    -moz-animation: scaleUp 0.5s both ease-in;
-    animation: scaleUp 0.5s both ease-in;
   }
 }
 /* ==========================================================================
@@ -362,6 +452,12 @@ div.clear {
 }
 /* ANIMATIONS
 ============================================================================= */
+/** Animate switching of views */
+.ng-enter {
+  -webkit-animation: scaleUp 0.5s both ease-in;
+  -moz-animation: scaleUp 0.5s both ease-in;
+  animation: scaleUp 0.5s both ease-in;
+}
 /* scale up */
 @-moz-keyframes scaleUp {
   from {
