--- a/css/main.styl
+++ b/css/main.styl
@@ -152,10 +152,6 @@ nav{
   margin-bottom: 0;
 }
 
-nav a{
-  margin: 0 auto 2em auto;
-}
-
 a{
   text-decoration: none;
   color: blue;
@@ -237,6 +233,99 @@ div.clear{
 
 }
 
+@media only screen and (max-width: 767px){
+  .aboutPage, .educationPage, .skillsPage, .contactPage{
+    nav{
+      ul{
+        max-height: 0;
+        overflow: hidden;
+        margin: 0 3.5em 0 1em;
+
+        li{
+          visibility: hidden;
+          display: block;
+          padding: 0;
+          border: none;
+
+          a{
+            margin: 0 auto 1em auto;
+          }
+        }
+      }
+      .navbar-handle{
+        display: block;
+      }
+    }
+
+    #navbar-checkbox:checked + nav{
+      ul{
+        max-height: 350px;
+      }
+      li{
+        visibility: visible;
+      }
+    }
+
+    nav {
+      position: relative;
+      top: 0;
+      left: 0;
+      right: 0;
+    }
+
+    nav .navbar-handle {
+      position: absolute;
+      font-size: 1.2em;
+      top: 0;
+      right: 12px;
+      z-index: 10;
+    }
+
+    h1{
+      margin-top: 0;
+    }
+  }
+  .homePage{
+    nav ul li a{
+      margin: 0 auto 2em auto;
+    }
+  }
+}
+
+.navbar-checkbox{
+  display: none;
+}
+
+.navbar-handle {
+  display: none;
+  cursor: pointer;
+  position: relative;
+  font-size: 45px;
+  padding: .5em 0;
+  height: 0;
+  width: 1.66666667em;
+  border-top: 0.13333333em solid;
+}
+
+.navbar-handle:before,
+.navbar-handle:after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  content: ' ';
+  border-top: 0.13333333em solid;
+}
+
+.navbar-handle:before {
+  top: 0.37777778em;
+}
+
+.navbar-handle:after {
+  top: 0.88888889em;
+}
+
+
+
 @media only screen and (min-width: 768px) {
   nav{
     width: 550px;
@@ -293,13 +382,12 @@ div.clear{
     line-height: 1.5em;
   }
 
-  /** Animate switching of views */
-  .ng-enter 		{
-      -webkit-animation:scaleUp 0.5s both ease-in;
-  	-moz-animation:scaleUp 0.5s both ease-in;
-  	animation:scaleUp 0.5s both ease-in;
-  }
 }
+
+
+
+
+
 
 /* ==========================================================================
    Media Queries
@@ -505,6 +593,13 @@ div.clear{
 
 /* ANIMATIONS
 ============================================================================= */
+/** Animate switching of views */
+.ng-enter 		{
+    -webkit-animation:scaleUp 0.5s both ease-in;
+  -moz-animation:scaleUp 0.5s both ease-in;
+  animation:scaleUp 0.5s both ease-in;
+}
+
 
 /* scale up */
 @keyframes scaleUp {
