Added form validation and some styles for contact form

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,25 +1,47 @@
 <div id='contactPage' class='container viewPage'>
 	<nav-panel></nav-panel>
 	<h1>Contact Me</h1>
-	<form ng-submit="submit(contactform)" name="contactform">
-		<div ng-class="{ 'has-error': contactform.inputname.$invalid && submitted }">
+	<div ng-model="resultMessage" class="emailResult message fadein fadeout" ng-show="showResult">{{ resultMessage }}</div>
+	<form ng-submit="submit(contactform)" name="contactform" novalidate>
+		<div class="form-group" ng-class="{ 'has-error': contactform.inputName.$touched && contactform.inputName.$invalid }">
 			<label for="inputName">Name</label><br/>
-			<input ng-model="formData.inputName" type="text" id="inputName" name="inputName" placeholder="Your Name" required>
+			<input ng-model="emailData.inputName" type="text" id="inputName" name="inputName" placeholder="Your Name" required>
+			<!-- Error message from form validation -->
+			<div call="error" ng-show="contactform.inputName.$touched && contactform.inputName.$invalid">
+					<small class="error">
+						Please enter your name.
+					</small>
+			</div>
 		</div>
-		<div ng-class="{ 'has-error': contactform.inputEmail.$invalid && submitted }">
+		<div class="form-group">
 			<label for="inputEmail">Email Address</label><br/>
-			<input ng-model="formData.inputEmail" type="email" id="inputEmail" name="inputEmail" placeholder="Your Email Address" required>
+			<input ng-model="emailData.inputEmail" type="email" id="inputEmail" name="inputEmail" placeholder="Your Email Address" required>
+			<!-- Error message from form validation, display different error message based on error -->
+			<div call="error" ng-show="contactform.inputEmail.$touched && contactform.inputEmail.$invalid">
+					<small class="error" ng-show="contactform.inputEmail.$error.required">
+						Please enter your email address.
+					</small>
+					<small class="error" ng-show="contactform.inputEmail.$error.email">
+						The email address you entered is invalid.
+					</small>
+			</div>
 		</div>
-		<div ng-class="{ 'has-error': contactform.inputMessage.$invalid && submitted }">
+		<div class="form-group">
 			<label for="inputMessage">Message</label><br/>
-			<textarea ng-model="formData.inputMessage" type="text" id="inputMessage" name="inputMessage" placeholder="Please enter your message..." required></textarea>
+			<textarea ng-model="emailData.inputMessage" type="text" id="inputMessage" name="inputMessage" placeholder="Please enter your message..." required></textarea>
+			<!-- Error message from form validation -->
+			<div call="error" ng-show="contactform.inputMessage.$touched && contactform.inputMessage.$invalid">
+					<small class="error">
+						Please enter a message.
+					</small>
+			</div>
 		</div>
 		<div>
-			<button type="submit" ng-disabled="submitButtonDisabled">
+			<button type="submit" class="sendMailBtn" ng-disabled="contactform.$invalid">
 				Send Mail
 			</button>
 		</div>
 
 	</form>
-	<p ng-class="result">{{ resultMessage }}</p>
+
 </div>
