--- a/css/main.styl
+++ b/css/main.styl
@@ -229,6 +229,11 @@ ul.noStyle{
   font-size: 1.5em;
   padding: 1em;
   margin: 2em 0 2em 0;
+  border-radius: 8px;
+}
+
+#contactPage .emailResult.sendError{
+  background-color: red;
 }
 
 .fadein.ng-hide-remove,
