Moving more email settings to config file, adding Udacity FSD Nanodegree, adding comments

--- a/css/main.styl
+++ b/css/main.styl
@@ -236,6 +236,7 @@ ul.noStyle{
   background-color: red;
 }
 
+// style confirmation messages
 .fadein.ng-hide-remove,
 .fadeout.ng-hide-add {
     -webkit-transition: 1000ms ease-in-out all;
@@ -255,6 +256,7 @@ ul.noStyle{
     opacity: 1;
 }
 
+// styles for contact page send mail button
 .sendMailBtn {
 	-moz-box-shadow: 0px 10px 14px -7px #276873;
 	-webkit-box-shadow: 0px 10px 14px -7px #276873;
@@ -320,6 +322,7 @@ ul.noStyle{
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffffff;
 }
+
 .skillsList{
   float: left;
   width: 33%;
