--- a/templates/education.html
+++ b/templates/education.html
@@ -1,7 +1,8 @@
-<div id='educationPage' class='container viewPage'>
-	<nav-panel></nav-panel>
-	<h1>Education</h1>
-	<div class="row university">
+<section id='educationPage' class='container viewPage'>
+	<md-toolbar class="md-primary">
+		<h1>Education</h1>
+	</md-toolbar>
+	<section class="row university">
 		<div style='float:left; margin-right: 1em'>
 			<img src="/img/Uwaterloo_seal.gif" alt="University of Waterloo" height="42" width="42">
 		</div>
@@ -9,33 +10,36 @@
 			<h3>University of Waterloo</h3>
 			Bachelor of Mathematics, Computer Science, Honours, Co-Operative Program
 		</div>
-	</div>
-	<div id='continuingEd' class='clear'>
+	</section>
+	<section id='continuingEd' class='clear'>
 		<h2>Continuing Education</h2>
-		<h3><img src="/img/EdX.svg" alt="edx" height="42"></h3>
-		<div ng-repeat="course in courses | filter: {school: 'edx'}" class="row">
-			<div>
-				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
-			</div>
-		</div>
-		<h3><img src="/img/Coursera_logo.png" alt="Coursera" height="42"></h3>
-		<div ng-repeat="course in courses | filter: {school: 'coursera'}" class="row">
-			<div>
-				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
-			</div>
-		</div>
 		<h3><img src="/img/Udacity_Logo.svg" alt="Udacity" height="42"></h3>
 		<div ng-repeat="course in courses | filter: {school: 'udacity'}" class="row">
 			<div>
 				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
 			</div>
 		</div>
+		<md-divider></md-divider>
+		<h3><img src="/img/EdX.svg" alt="edx" height="42"></h3>
+		<div ng-repeat="course in courses | filter: {school: 'edx'}" class="row">
+			<div>
+				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
+			</div>
+		</div>
+		<md-divider></md-divider>
+		<h3><img src="/img/Coursera_logo.png" alt="Coursera" height="42"></h3>
+		<div ng-repeat="course in courses | filter: {school: 'coursera'}" class="row">
+			<div>
+				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
+			</div>
+		</div>
+		<md-divider></md-divider>
 		<h3><img src="/img/mongodb_university_logo.png" alt="MongoDB University" height="42"></h3>
 		<div ng-repeat="course in courses | filter: {school: 'mongodb'}" class="row">
 			<div>
 				{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
 			<div>
 		</div>
-	</div>
+	</section>
 
-</div>
+</section>
