--- a/templates/nav-panel.html
+++ b/templates/nav-panel.html
@@ -1,7 +1,7 @@
 <input type="checkbox" id="navbar-checkbox" class="navbar-checkbox">
 <nav>
 	<ul class='clearfix'>
-		<li ng-repeat="navlink in navlinks" ng-hide="{{isActive(navlink)}}" id="{{navlink.title}}-link">
+		<li ng-repeat="navlink in navlinks"  id="{{navlink.title}}-link">
 			<a href="/#{{navlink.path}}"><span>{{navlink.title}}</span></a>
 		</li>
 	</ul>
