--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,23 +1,6 @@
-<div id='skillsPage' class='container viewPage'>
-	<nav-panel></nav-panel>
-	<h1>Skills</h1>
-	<div id='currentSkills' class='skillsList'>
-		<h2>Currently Using</h2>
-		<ul ng-repeat="skill in skills | filter: {activity: 'Current'} | orderBy: 'name'" class='noStyle'>
-			<li>{{skill.name}}</li>
-		</ul>
-	</div>
-	<div id='recentSkills' class='skillsList'>
-		<h2>Recently Used</h2>
-		<ul ng-repeat="skill in skills | filter: {activity: 'Recent'} | orderBy: 'name'" class='noStyle'>
-			<li>{{skill.name}}</li>
-		</ul>
-	</div>
-	<div id='rustySkills' class='skillsList'>
-		<h2>Getting Rusty</h2>
-		<ul ng-repeat="skill in skills | filter: {activity: 'Rusty'} | orderBy: 'name'" class='noStyle'>
-			<li>{{skill.name}}</li>
-		</ul>
-	</div>
-	<div class='clear'></div>
-</div>
+<section id='skillsPage' class='container viewPage'>
+	<md-toolbar class="md-primary">
+		<h1>Skills</h1>
+	</md-toolbar>
+
+</section>
