--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -11,12 +11,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--<link rel="apple-touch-icon" href="apple-touch-icon.png">-->
 	<link rel="stylesheet" href="/css/normalize.min.css">
+	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
 	<link rel="stylesheet" href="/css/main.css">
 
-	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js'></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-route.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular-animate.js"></script>
-  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 	<title>Christopher Crookes - Vancouver Based Web App Developer</title>
 </head>
 <body ng-app='app'>
@@ -24,6 +21,7 @@
 		<header>
 			<h1>Christopher Crookes</h1>
 			<p>Vancouver Based Web App Developer</p>
+			<nav-panel></nav-panel>
 		</header>
 		<div ng-view id='pageView' ng-class='pageId'>
 
@@ -31,6 +29,13 @@
 		<div id='footer'>
 		</div>
 	</div>
+	<script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js'></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-route.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-aria.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-messages.js"></script>
+  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 	<script src='/js/app.js'></script>
 </body>
 </html>
