Updating theme colors. Using md-theme for each page

--- a/css/main.styl
+++ b/css/main.styl
@@ -1,9 +1,14 @@
 /* ==== Site Colours =======================*/
 homeColour = #800000;
-aboutColour = #006600;
+/*aboutColour = #006600;
 educationColour = #004d4d;
 skillsColour = #c05656;
-contactColour = #803a00;
+contactColour = #803a00;*/
+aboutColour = #4CAF50;  //Green
+educationColour = #3F51B5; //Indigo
+skillsColour = #FF5722; //Orange
+contactColour = #9C27B0; //Purple
+
 
 html{
     color: #222;
@@ -137,6 +142,9 @@ header{
   background: homeColour;
   padding-left: 2em;
   text-align: center;
+}
+#mainHeader a{
+  color: #FFF;
 }
 
 .viewPage{
