--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-<article id='aboutPage' class='container viewPage'>
+<article id='aboutPage' class='container viewPage' md-theme='aboutTheme'>
 	<md-toolbar class="md-primary">
 		<h1>About Me</h1>
 	</md-toolbar>
