--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-<section id='contactPage' class='container viewPage' layout="column">
+<section id='contactPage' class='container viewPage' layout="column" md-theme="contactTheme">
 	<md-toolbar class="md-primary">
 		<h1>Contact Me</h1>
 	</md-toolbar>
