--- a/templates/education.html
+++ b/templates/education.html
@@ -1,4 +1,4 @@
-<section id='educationPage' class='container viewPage'>
+<section id='educationPage' class='container viewPage' md-theme='educationTheme'>
 	<md-toolbar class="md-primary">
 		<h1>Education</h1>
 	</md-toolbar>
