--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -18,9 +18,9 @@
 </head>
 <body ng-app='app'>
 	<div id="wrapper">
-		<header>
-			<h1>Christopher Crookes</h1>
-			<p>Vancouver Based Web App Developer</p>
+		<header id='mainHeader'>
+			<a href='#/'><h1>Christopher Crookes</h1>
+			<p>Vancouver Based Web App Developer</p></a>
 			<nav-panel></nav-panel>
 		</header>
 		<div ng-view id='pageView' ng-class='pageId'>
