--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,4 +1,4 @@
-<section id='skillsPage' class='container viewPage'>
+<section id='skillsPage' class='container viewPage' md-theme='skillsTheme'>
 	<md-toolbar class="md-primary">
 		<h1>Skills</h1>
 	</md-toolbar>
