Changing nav links to md-buttons

--- a/css/main.styl
+++ b/css/main.styl
@@ -90,7 +90,7 @@ nav a {
     font-weight: bold;
     margin-right: 1em;
     padding: 15px;
-    width: 80px;
+    width: 120px;
 }
 
 nav a:hover,
@@ -138,9 +138,6 @@ nav a:hover {
    ========================================================================== */
 
 header{
-  color: #fff;
-  background: homeColour;
-  padding-left: 2em;
   text-align: center;
 }
 #mainHeader a{
@@ -443,13 +440,11 @@ div.clear{
     margin: 0 auto;
   }
 
-  nav ul{
 
-  }
 
   nav ul li a{
     float: left;
-    margin-right: 2em;
+
   }
 
 }
@@ -477,6 +472,10 @@ div.clear{
 
   nav{
     width: 100%;
+
+    ul{
+      width: 300px;
+    }
   }
 
   .viewPage{
@@ -567,13 +566,6 @@ div.clear{
         width: 28%;
     }
 
-    nav li:first-child a {
-        margin-left: 0;
-    }
-
-    nav li:last-child a {
-        margin-right: 0;
-    }
 
 
 }
