--- a/templates/skills.html
+++ b/templates/skills.html
@@ -2,5 +2,7 @@
 	<md-toolbar class="md-primary">
 		<h1>Skills</h1>
 	</md-toolbar>
-
+	<div id="viewPageMain">
+		<p>Test, test, test</p>
+	</div>
 </section>
