--- a/templates/about.html
+++ b/templates/about.html
@@ -2,8 +2,10 @@
 	<md-toolbar class="md-primary">
 		<h1>About Me</h1>
 	</md-toolbar>
-	<p>I am a software developer based in Vancouver, British Columbia, primarily interested in the health technology field.	</p>
-	<p>Health is a passion of mine, and I believe in promoting both physical and mental well being. My mission is to help empower people to live longer, healthier, and happier lives through technology.</p>
-	<p>It's an exciting time for the health industry, with emerging technologies allowing individuals to stay on top of their own health. With new technology, we can catch potential health issues earlier, and develop personalized treatments for everyone's unique health situation.</p>
-	<p>I have nearly 20 years of experience in software development. I have worked in a variety of environments, from small start-ups in San Francisco to large multination corporations in Japan. For more info, check out my <a href='http://www.linkedin.com/in/christophercrookes'>LinkedIn profile</a>, or <a href='/#/contact'>contact me</a> directly.</p>
+	<div id="viewPageMain">
+		<p>I am a software developer based in Vancouver, British Columbia, primarily interested in the health technology field.	</p>
+		<p>Health is a passion of mine, and I believe in promoting both physical and mental well being. My mission is to help empower people to live longer, healthier, and happier lives through technology.</p>
+		<p>It's an exciting time for the health industry, with emerging technologies allowing individuals to stay on top of their own health. With new technology, we can catch potential health issues earlier, and develop personalized treatments for everyone's unique health situation.</p>
+		<p>I have nearly 20 years of experience in software development. I have worked in a variety of environments, from small start-ups in San Francisco to large multination corporations in Japan. For more info, check out my <a href='http://www.linkedin.com/in/christophercrookes'>LinkedIn profile</a>, or <a href='/#/contact'>contact me</a> directly.</p>
+	</div>
 </article>
