Updating skills page. Added background colors to differentiate between skill usage

--- a/css/main.styl
+++ b/css/main.styl
@@ -154,6 +154,7 @@ header{
   md-toolbar{
     padding-left: 1.5em;
   }
+  max-width: 1100px;
   #viewPageMain{
     padding: 0 1.5em;
   }
@@ -214,6 +215,35 @@ ul.noStyle{
 #continuingEd a{
   padding-left: 5px;
 }
+
+#skillsPage{
+  md-toolbar{
+    margin-bottom: 2em;
+  }
+  #skillLegend{
+    border: 2px dashed skillsColour;
+    margin-bottom: 1.5em;
+    border-radius: 12px;
+    padding 1em;
+  }
+  .skillCategory{
+    margin-bottom: 1em;
+  }
+  .skillList{
+    padding: 5px;
+    color: #000;
+  }
+  .skillCurrent{
+    background-color: #C8E6C9;
+  }
+  .skillRecent{
+    background-color: #C5CAE9;
+  }
+  .skillPast{
+    background-color: #FFCCBC;
+  }
+}
+
 
 #contactPage input,
 #contactPage textarea{
