--- a/css/main.styl
+++ b/css/main.styl
@@ -243,43 +243,39 @@ ul.noStyle{
   }
 }
 
+#contactPage{
 
-#contactPage input,
-#contactPage textarea{
-  padding: 5px;
-  border-radius:5px;
+  input{
+    max-width: 300px;
+  }
+
+  label{
+    font-weight: bold;
+  }
+
+  .form-group{
+    margin-bottom: 1.5em;
+  }
+
+  .emailButton{
+
+  }
+
+  .emailResult{
+    background-color: aboutColour;
+    color: #ffffff;
+    margin: 6px 8px;
+    padding: 0 1em;
+    align-items: center;
+    line-height: 36px;
+    min-height: 36px;
+    text-align: center;
+  }
+
+  .emailResult.sendError{
+    background-color: red;
+  }
 }
-
-#contactPage input{
-  width: 300px;
-}
-
-#contactPage textarea{
-  height: 250px;
-  width: 500px;
-}
-
-#contactPage label{
-  font-weight: bold;
-}
-
-#contactPage .form-group{
-  margin-bottom: 1.5em;
-}
-
-#contactPage .emailResult{
-  background-color: green;
-  color: #ffffff;
-  font-size: 1.5em;
-  padding: 1em;
-  margin: 2em 0 2em 0;
-  border-radius: 8px;
-}
-
-#contactPage .emailResult.sendError{
-  background-color: red;
-}
-
 // style confirmation messages
 .fadein.ng-hide-remove,
 .fadeout.ng-hide-add {
@@ -300,77 +296,7 @@ ul.noStyle{
     opacity: 1;
 }
 
-// styles for contact page send mail button
-.sendMailBtn {
-	-moz-box-shadow: 0px 10px 14px -7px #276873;
-	-webkit-box-shadow: 0px 10px 14px -7px #276873;
-	box-shadow: 0px 10px 14px -7px #276873;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #408c99));
-	background:-moz-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-webkit-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-o-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:-ms-linear-gradient(top, #599bb3 5%, #408c99 100%);
-	background:linear-gradient(to bottom, #599bb3 5%, #408c99 100%);
-	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#408c99', GradientType=0)");
-	background-color:#599bb3;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:20px;
-	font-weight:bold;
-	padding:13px 32px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #3d768a;
-}
-.sendMailBtn:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #408c99), color-stop(1, #599bb3));
-	background:-moz-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-webkit-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-o-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:-ms-linear-gradient(top, #408c99 5%, #599bb3 100%);
-	background:linear-gradient(to bottom, #408c99 5%, #599bb3 100%);
-	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#408c99', endColorstr='#599bb3', GradientType=0)");
-	background-color:#408c99;
-}
-.sendMailBtn:active {
-	position:relative;
-	top:1px;
-}
-.sendMailBtn:disabled{
-	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
-	box-shadow:inset 0px 1px 0px 0px #ffffff;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
-	background:-moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
-	background:-webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
-	background:-o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
-	background:-ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
-	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
-	filter: unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf', GradientType=0)");
-	background-color:#ededed;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
-	border-radius:8px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	cursor:not-allowed;
-	color:#777777;
-	font-family:Arial;
-	font-size:20px;
-	font-weight:bold;
-	padding:13px 32px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffffff;
-}
 
-.skillsList{
-  float: left;
-  width: 33%;
-}
 
 div.clear{
   clear: both;
