--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,10 @@
 <article id='aboutPage' class='container viewPage' md-theme='aboutTheme'>
 	<md-toolbar class="md-primary">
-		<h1>About Me</h1>
+		<div class="md-toolbar-tools">
+			<md-icon>face</md-icon>
+			<h1><span>About Me</span></h1>
+			<span flex></span>
+		</div>
 	</md-toolbar>
 	<div id="viewPageMain">
 		<p>I am a software developer based in Vancouver, British Columbia, primarily interested in the health technology field.	</p>
