--- a/templates/education.html
+++ b/templates/education.html
@@ -1,6 +1,10 @@
 <section id='educationPage' class='container viewPage' md-theme='educationTheme'>
 	<md-toolbar class="md-primary">
-		<h1>Education</h1>
+		<div class="md-toolbar-tools">
+			<md-icon>school</md-icon>
+			<h1><span>Education</span></h1>
+			<span flex></span>
+		</div>
 	</md-toolbar>
 	<div id="viewPageMain">
 		<section class="row university">
