--- a/templates/skills.html
+++ b/templates/skills.html
@@ -1,6 +1,10 @@
 <section id='skillsPage' class='container viewPage' md-theme='skillsTheme'>
 	<md-toolbar class="md-primary">
-		<h1>Skills</h1>
+		<div class="md-toolbar-tools">
+			<md-icon>build</md-icon>
+			<h1><span>Skills</span></h1>
+			<span flex></span>
+		</div>
 	</md-toolbar>
 	<md-list id="viewPageMain">
 		<md-list-item id="skillLegend" layout-sm="column" layout-gt-sm="row" layout-align="start start">
