--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="/css/normalize.min.css">
 	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
 	<link rel="stylesheet" href="/css/main.css">
-
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<title>Christopher Crookes - Vancouver Based Web App Developer</title>
 </head>
 <body ng-app='app'>
