--- a/templates/nav-panel.html
+++ b/templates/nav-panel.html
@@ -1,9 +1,11 @@
-<input type="checkbox" id="navbar-checkbox" class="navbar-checkbox">
+<!-- <input type="checkbox" id="navbar-checkbox" class="navbar-checkbox"> -->
 <nav>
 	<ul class='clearfix'>
 		<li ng-repeat="navlink in navlinks"  id="{{navlink.title}}-link">
-			<!--<a href="/#{{navlink.path}}"><span>{{navlink.title}}</span></a>-->
-			<md-button class="md-raised" href="/#{{navlink.path}}">{{navlink.title}}</md-button>
+			<md-button class="md-raised" href="/#{{navlink.path}}">
+				<md-icon>{{navlink.icon}}</md-icon>
+				{{navlink.title}}
+			</md-button>
 		</li>
 	</ul>
 	<label for="navbar-checkbox" class="navbar-handle"></label>
