--- a/css/main.styl
+++ b/css/main.styl
@@ -155,6 +155,7 @@ header{
     margin-bottom: 2em;
     h1{
       padding-left: 5px;
+      font-weight: bold;
     }
   }
   max-width: 1100px;
@@ -220,6 +221,13 @@ ul.noStyle{
 
 #continuingEd a{
   padding-left: 5px;
+}
+
+#aboutPage{
+  #viewPageMain{
+    margin: auto;
+    max-width: 700px;
+  }
 }
 
 #skillsPage{
@@ -317,8 +325,11 @@ div.clear{
 
 }
 
-@media only screen and (min-width: 768px) {
-
+@media only screen and (min-width: 601px) {
+  .aboutPage p{
+    font-size: 1.3em;
+    line-height: 1.5em;
+  }
 }
 
 @media only screen and (min-width: 1100px) {
@@ -372,10 +383,7 @@ div.clear{
   //   height: 1px;
   // }
 
-  // .aboutPage p{
-  //   font-size: 1.5em;
-  //   line-height: 1.5em;
-  // }
+
 
 }
 
