--- a/templates/about.html
+++ b/templates/about.html
@@ -4,6 +4,7 @@
 			<md-icon>face</md-icon>
 			<h1><span>About Me</span></h1>
 			<span flex></span>
+			<hamburger-panel></hamburger-panel>
 		</div>
 	</md-toolbar>
 	<div id="viewPageMain">
