--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,10 @@
 <div id='homePage' class='container viewPage'>
+  <!-- <hamburger-panel></hamburger-panel> -->
+  <nav-panel></nav-panel>
+  <p>
+    Full Stack Web Development
+  </p>
+  <p>
+    Passionate about health technology
+  </p>
 </div>
