--- a/templates/skills.html
+++ b/templates/skills.html
@@ -4,6 +4,7 @@
 			<md-icon>build</md-icon>
 			<h1><span>Skills</span></h1>
 			<span flex></span>
+			<hamburger-panel></hamburger-panel>
 		</div>
 	</md-toolbar>
 	<md-list id="viewPageMain">
