Updated education to use material list. Changed coursera and udacity logos.

--- a/templates/education.html
+++ b/templates/education.html
@@ -19,37 +19,27 @@
 		</section>
 		<section id='continuingEd' class='clear'>
 			<h2>Continuing Education</h2>
-			<div layout="row" layout-align="start start">
-				<h3><img src="/img/Udacity_Logo.svg" alt="Udacity" height="42"></h3>
-				<div layout="column">
-					<div ng-repeat="course in courses | filter: {school: 'udacity'}">
-						<div>
-							{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
-						</div>
+			<md-list>
+				<md-list-item layout="column" layout-align="start start" ng-repeat="school in schools">
+					<div>
+						<img src="/img/{{school.logo}}" alt="{{school.name}}" height="24">
 					</div>
-				</div>
-			</div>
-			<md-divider></md-divider>
-			<h3><img src="/img/EdX.svg" alt="edx" height="42"></h3>
-			<div ng-repeat="course in courses | filter: {school: 'edx'}">
-				<div>
-					{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
-				</div>
-			</div>
-			<md-divider></md-divider>
-			<h3><img src="/img/Coursera_logo.png" alt="Coursera" height="42"></h3>
-			<div ng-repeat="course in courses | filter: {school: 'coursera'}" class="row">
-				<div>
-					{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
-				</div>
-			</div>
-			<md-divider></md-divider>
-			<h3><img src="/img/mongodb_university_logo.png" alt="MongoDB University" height="42"></h3>
-			<div ng-repeat="course in courses | filter: {school: 'mongodb'}" class="row">
-				<div>
-					{{course.name}}<small><a href="{{course.course_link}}" target="_blank">(course)</a><a href="{{course.certificate_link}}" target="_blank">(certificate)</a></small>
-				<div>
-			</div>
+					<md-list layout="column">
+						<md-list-item class="course" ng-repeat="course in courses | filter: {school: school.name}">
+							<div>
+								{{course.name}}
+								<small>
+									<a href="{{course.course_link}}" target="_blank">(course)</a>
+									<a href="{{course.certificate_link}}" target="_blank">(certificate)</a>
+								</small>
+							</div>
+							<md-divider ng-if="!$last"></md-divider>
+						</md-list-item>
+					</md-list>
+					<md-divider ng-if="!$last"></md-divider>
+				</md-list-item>
+			</md-list>
+
 		</section>
 	</div>
 </section>
