--- a/templates/hamburger-panel.html
+++ b/templates/hamburger-panel.html
@@ -1,6 +1,6 @@
 <md-menu md-position-mode="target-right target">
-	<md-button aria-label="Open menu" class="md-icon-button" ng-click="$mdOpenMenu($event)">
-		<md-icon>menu</md-icon>
+	<md-button aria-label="Open menu" ng-click="$mdOpenMenu($event)">
+		<md-icon>menu</md-icon><span>Menu</span>
 	</md-button>
 	<md-menu-content width="5">
 		<md-menu-item ng-repeat="navlink in navlinks">
