--- a/views/index.html.ejs
+++ b/views/index.html.ejs
@@ -14,13 +14,13 @@
 	<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
 	<link rel="stylesheet" href="/css/main.css">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<title>Christopher Crookes - Vancouver Based Web App Developer</title>
+	<title>Christopher Crookes - Vancouver Based Python Developer</title>
 </head>
 <body ng-app='app'>
 	<div id="wrapper">
 		<header id='mainHeader'>
 			<a href='#/'><h1>Christopher Crookes</h1>
-			<p>Vancouver Based Web App Developer</p></a>
+			<p>Vancouver Based Python Developer</p></a>
 			<nav-panel></nav-panel>
 		</header>
 		<div ng-view id='pageView' ng-class='pageId'>
